crates/conflux-backend/src/singbox/snapshots/conflux_backend__singbox__config__tests__shadowsocks.snap
---
source: crates/conflux-backend/src/singbox/config.rs
expression: redacted
---
{
  "dns": {
    "servers": [
      {
        "address": "1.1.1.1",
        "tag": "dns-direct"
      }
    ]
  },
  "inbounds": [
    {
      "listen": "127.0.0.1",
      "listen_port": 7890,
      "tag": "mixed-in",
      "type": "mixed"
    }
  ],
  "log": {
    "level": "info"
  },
  "outbounds": [
    {
      "method": "2022-blake3-aes-128-gcm",
      "password": "<REDACTED_PASSWORD>",
      "server": "<REDACTED_SERVER>",
      "server_port": 8388,
      "tag": "proxy",
      "type": "shadowsocks"
    },
    {
      "tag": "direct",
      "type": "direct"
    },
    {
      "tag": "dns-out",
      "type": "dns"
    }
  ],
  "route": {
    "final": "proxy",
    "rules": [
      {
        "outbound": "dns-out",
        "protocol": "dns"
      },
      {
        "inbound": "mixed-in",
        "outbound": "proxy"
      }
    ]
  }
}
