crates/conflux-backend/src/singbox/snapshots/conflux_backend__singbox__config__tests__trojan.snap
---
source: crates/conflux-backend/src/singbox/config.rs
expression: redacted
---
{
  "inbounds": [
    {
      "listen": "127.0.0.1",
      "listen_port": 7890,
      "tag": "mixed-in",
      "type": "mixed"
    }
  ],
  "log": {
    "level": "info"
  },
  "outbounds": [
    {
      "password": "<REDACTED_PASSWORD>",
      "server": "<REDACTED_SERVER>",
      "server_port": 443,
      "tag": "proxy",
      "tls": {
        "enabled": true,
        "server_name": "<REDACTED_HOST>"
      },
      "transport": {
        "host": "<REDACTED_HOST>",
        "path": "/trojan",
        "type": "ws"
      },
      "type": "trojan"
    },
    {
      "tag": "direct",
      "type": "direct"
    }
  ],
  "route": {
    "final": "proxy",
    "rules": [
      {
        "inbound": "mixed-in",
        "outbound": "proxy"
      }
    ]
  }
}
