crates/conflux-backend/src/singbox/snapshots/conflux_backend__singbox__config__tests__vless.snap
---
source: crates/conflux-backend/src/singbox/config.rs
expression: redacted
---
{
  "dns": {
    "servers": [
      {
        "server": "<REDACTED_SERVER>",
        "tag": "dns-direct",
        "type": "udp"
      }
    ]
  },
  "inbounds": [
    {
      "listen": "127.0.0.1",
      "listen_port": 7890,
      "tag": "mixed-in",
      "type": "mixed"
    }
  ],
  "log": {
    "level": "info"
  },
  "outbounds": [
    {
      "flow": "xtls-rprx-vision",
      "server": "<REDACTED_SERVER>",
      "server_port": 443,
      "tag": "proxy",
      "tls": {
        "alpn": [
          "h2",
          "http/1.1"
        ],
        "enabled": true,
        "reality": {
          "enabled": true,
          "public_key": "<REDACTED_PUBLIC_KEY>",
          "short_id": "<REDACTED_SHORT_ID>",
          "spider_x": "/"
        },
        "server_name": "<REDACTED_HOST>",
        "utls": {
          "enabled": true,
          "fingerprint": "chrome"
        }
      },
      "transport": {
        "service_name": "grpc-service",
        "type": "grpc"
      },
      "type": "vless",
      "uuid": "<REDACTED_UUID>"
    },
    {
      "tag": "direct",
      "type": "direct"
    },
    {
      "tag": "dns-out",
      "type": "dns"
    }
  ],
  "route": {
    "final": "proxy",
    "rules": [
      {
        "outbound": "dns-out",
        "protocol": "dns"
      },
      {
        "inbound": "mixed-in",
        "outbound": "proxy"
      }
    ]
  }
}
